--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
             <div class="menu">
                 <ul>
                     <li><a href="home.html">HOME</a></li>
-                    <li><a href="#">SERIES</a></li>
-                    <li><a href="#">CONTACT_US</a></li>
-                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="contact.html">CONTACTS</a></li>
                 </ul>
             </div>
             <div class="search">
@@ -30,14 +29,14 @@
             <p class="par">Nflix is a Rwandan subscription video on-demand over-the-top streaming service. <br>
                  The service primarily distributes original and acquired films and television shows <br>
                  from various genres, and it is available internationally in multiple languages</p>
-                  <button class="cn"><a href="#">SIGN IN</a></button>
+                  <button class="cn"><a href="signin.html">SIGN IN</a></button>
                   <div class="form">
                     <h2>Login Here</h2>
                     <input type="email" name="email" placeholder="Email">
                     <input type="password" name="" placeholder="Password">
                     <button class="btnn"><a href="home.html">Login</a></button>
                     <p class="link" >Dont have an account <br>
-                    <a href="#">Sign up</a></p>
+                    <li><a href="signin.html">Sign up</a></li></p>
                   </div>
         </div>
     </div>
