--- a/Orange Is the New Black.html
+++ b/Orange Is the New Black.html
@@ -11,7 +11,9 @@
         <h1>Orange Is The New Black</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contacts</a></li>
             </ul>
         </nav>
     </header>
