--- a/movie.html
+++ b/movie.html
@@ -13,12 +13,13 @@
                 <h2 class="logo">NFLIX</h2>
             </div>
             <div class="menu">
-                <ul>
-                    <li><a href="home.html">HOME</a></li>
-                    <li><a href="#">SERIES</a></li>
-                    <li><a href="#">CONTACT US</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                </ul>
+                <nav>
+                    <ul>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contacts</a></li>
+                    </ul>
+                </nav>
             </div>
             <div class="search">
                 <input class="srch" type="search" placeholder="Search Here">
@@ -30,14 +31,14 @@
             <p class="par">Nflix is a Rwandan subscription video on-demand over-the-top streaming service. <br>
                 The service primarily distributes original and acquired films and television shows <br>
                 from various genres, and it is available internationally in multiple languages.</p>
-            <button class="cn"><a href="#">SIGN IN</a></button>
+            <button class="cn"><a href="signin.html">SIGN IN</a></button>
             <div class="form">
                 <h2>Login Here</h2>
                 <input type="email" name="email" placeholder="Email" required>
                 <input type="password" name="password" placeholder="Password" required>
                 <button class="btnn" type="submit">Login</button>
                 <p class="link">Don't have an account? <br>
-                <a href="#">Sign up</a></p>
+                <a href="signup.html">Sign up</a></p>
             </div>
         </div>
     </div>
